# nexus

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .terraformignore  CONTRIBUTING.md  LICENSE  README.md  devsetup.sh  docker-compose.yml  nexus.code-workspace  package-lock.json  package.json  pyproject.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: copilot-instructions.md
.github/agents/: speckit.implement.agent.md  speckit.plan.agent.md  speckit.tasks.agent.md
.github/prompts/: speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.tasks.prompt.md
.github/skills/agent-tracer/: SKILL.md
.github/workflows/: ci.yml  deploy-a2a.yml  deploy-api.yml  deploy-dashboard.yml  deploy-frontend.yml  deploy-logistics-data.yml  deploy-logistics.yml  deploy-mcp.yml  deploy-recommendations.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
agent-a2a/: README.md  main.py  pyproject.toml
backend/: .env.example  README.md  clients.py  main.py  monitoring.py  pyproject.toml
backend/agent-a2a/: main.py  pyproject.toml  pyrightconfig.json
backend/agents/: __init__.py
backend/agents/tools/: __init__.py  analysis_tools.py  chart_tools.py  filter_tools.py  recommendation_tools.py
backend/agents/utils/: mcp_client.py
backend/api/: README.md  clients.py  main.py  monitoring.py  pyproject.toml  pyrightconfig.json
backend/api/agents/: logistics_agent.py
backend/api/agents/prompts/: logistics_agent.md
backend/api/agents/tools/: __init__.py  filter_tools.py  recommendation_tools.py
backend/api/agents/utils/: __init__.py  data_helpers.py
backend/api/middleware/: __init__.py  responses_api.py
backend/api/patches/: __init__.py  agui_event_stream.py  conversation_id_injection.py
backend/api/typings/agent_framework_a2a/: __init__.pyi
backend/mcp/: README.md  auth.py  main.py  pyproject.toml
backend/middleware/: __init__.py  assistants_api.py  auth.py
backend/patches/: __init__.py  conversation_id_injection.py  deepcopy_rlock.py  pydantic_schema.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  staticwebapp.config.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthButton.tsx  AuthenticatedCopilotKit.tsx  FlightDetailCard.tsx  FlightListCard.tsx  HistoricalChart.tsx  NoAuthCopilotKit.tsx  Providers.tsx  RiskBadge.tsx
frontend/src/lib/: appInsights.ts  logisticsTypes.ts  msalConfig.ts  useAccessToken.ts  useLogisticsData.ts
infra/: .terraform.lock.hcl  README.md  ai-platform.tf  compute.tf  data.tf  devops.tf  locals.shared.tf  main.tf  networking.tf  observability.tf  outputs.tf  providers.tf  security.tf  terraform.tfvars.example  utility.tf  variables.tf  workload.tf
infra/scripts/: update-github-vars-from-terraform.sh
mcp/: Dockerfile  main.py  pyproject.toml
mcp/data/: flights.json  oneview.json
media/docs/: ag-ui-features.md  coding-standard.md  dev-setup.md  getting-started.md  glossary.md
monitoring/: README.md  conversation-viewer.html  docker-compose.yml  tempo-config.yaml
monitoring/azure-dashboard/: README.md  index.html  tailwind.config.js
monitoring/otel-dashboard/: README.md
scripts/: create-chat-app.ps1  create-github-creds.ps1  create-mcp-app.ps1  run-agent.bat  run-agent.sh  run-backend.ps1  run-backend.sh  setup-agent.bat  setup-agent.sh  setup-backend.ps1  setup-backend.sh
specs/001-upgrade-stack-versions/: data-model.md  dependency-baseline.md  foundry-migration-checklist.md  lockfile-update-records.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  upgrade-scope-matrix.md  validation-index.md
specs/002-foundry-v2-tracing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-private-networking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-agent-session-persistence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-user-feedback-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/backend/: .dockerignore  .env.example
src/backend/agent-a2a/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
src/backend/api/: .dockerignore  Dockerfile  README.md  clients.py  main.py  monitoring.py  pyproject.toml
src/backend/api/agents/: logistics_agent.py
src/backend/api/agents/prompts/: logistics_agent.md
src/backend/api/agents/tools/: analysis_tools.py  chart_tools.py  filter_tools.py  recommendation_tools.py
src/backend/api/agents/utils/: __init__.py  telemetry_constants.py  trace_context.py
src/backend/api/middleware/: __init__.py  auth.py
src/backend/api/patches/: __init__.py  agui_event_stream.py
src/backend/api/scripts/: validate_turn_traces.py
src/backend/api/typings/agent_framework_a2a/: __init__.pyi
src/backend/logistics/: .env.example  Dockerfile.local  README.md  main.py  pyproject.toml
src/backend/logistics/agents/: __init__.py  logistics_agent.py
src/backend/logistics/agents/prompts/: logistics_agent.md
src/backend/logistics/agents/tools/: __init__.py  analysis_tools.py  chart_tools.py  feedback_tools.py  filter_tools.py  recommendation_tools.py  trace_helpers.py
src/backend/logistics/agents/utils/: __init__.py  data_helpers.py  mcp_client.py  session_models.py  trace_models.py
src/backend/logistics/middleware/: auth.py
src/backend/logistics/patches/: __init__.py
src/backend/logistics/services/: __init__.py  feedback_service.py  session_service.py
src/backend/mcp/: README.md  auth.py  main.py  pyproject.toml
src/backend/recommendations/: .env.example  README.md  main.py  pyproject.toml
src/frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
src/monitoring/: README.md
src/scripts/: run-backend.ps1  run-backend.sh  setup-backend.ps1  setup-backend.sh
(+121 files in other folders)
