[project]
name = "nexus-monorepo"
version = "0.1.0"
description = "Monorepo-level developer tooling for Nexus"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "poethepoet>=0.30.0",
    "ruff>=0.11.0",
]

[tool.uv]
prerelease = "allow"

[tool.poe.tasks]
bootstrap = { shell = "bash devsetup.sh", help = "Set up all monorepo dev dependencies" }

setup-logistics = { shell = "cd src/backend/logistics && uv sync --dev" }
setup-logistics-data = { shell = "cd src/backend/logistics-data && uv sync --dev" }
setup-recommendations = { shell = "cd src/backend/recommendations && uv sync --dev" }
setup-frontend = { shell = "cd src/frontend && npm install" }

check-logistics = { shell = "cd src/backend/logistics && uv run poe check" }
check-logistics-data = { shell = "cd src/backend/logistics-data && uv run poe check" }
check-recommendations = { shell = "cd src/backend/recommendations && uv run poe check" }
check.sequence = ["check-logistics", "check-logistics-data", "check-recommendations"]

format-logistics = { shell = "cd src/backend/logistics && uv run poe format" }
format-logistics-data = { shell = "cd src/backend/logistics-data && uv run poe format" }
format-recommendations = { shell = "cd src/backend/recommendations && uv run poe format" }
format.sequence = ["format-logistics", "format-logistics-data", "format-recommendations"]
