[project]
name = "recommendations-agent"
version = "0.1.0"
description = "A2A-enabled recommendations agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.22",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.11.3",
    "python-dotenv",
]

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
