[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=1.1.0,<2.0.0",
    "agent-framework-a2a>=1.0.0b260528",
    "agent-framework-ag-ui>=1.0.0rc3",
    "agent-framework-core>=1.7.0",
    "agent-framework-foundry>=1.7.0",
    "azure-ai-projects>=2.1.0",
    "azure-identity>=1.25.3",
    "aiohttp>=3.13.2",
    "fastapi>=0.133.0,<0.133.1",
    "uvicorn>=0.48.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv",
    "fastapi-azure-auth>=5.2.0",
    "azure-monitor-opentelemetry>=1.8.8",
    "azure-cosmos>=4.14.1",
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0,<1.41.0",
    "opentelemetry-exporter-otlp>=1.40.0,<1.41.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "poethepoet>=0.46.0",
    "ruff>=0.15.15",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.poe.tasks]
format = [
    { cmd = "ruff format ." },
    { cmd = "ruff check . --fix" },
]
lint = { cmd = "ruff check . --fix" }
typecheck = { cmd = "basedpyright --level error ." }
check.ignore_fail = "return_non_zero"
check.sequence = [
    { cmd = "ruff check ." },
    { cmd = "basedpyright --level error ." },
]
dev = { shell = "uv run uvicorn main:app --host 0.0.0.0 --port 8000 --reload" }

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["."]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    ".ruff_cache",
    ".pyright_cache",
]
