[project]
name = "logistics-mcp-server"
version = "0.1.0"
description = "MCP server for logistics flight data (HTTP transport)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.2",
    "httpx>=0.28.1,<1.0",
    "uvicorn>=0.48.0",
    "starlette>=1.2.0",
    "python-dotenv",
    "duckdb>=1.5.3",
    "pyjwt[crypto]>=2.13.0",
    "cachetools>=7.1.4",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "poethepoet>=0.46.0",
    "ruff>=0.15.15",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.poe.tasks]
format = [
    { cmd = "ruff format ." },
    { cmd = "ruff check . --fix" },
]
lint = { cmd = "ruff check . --fix" }
typecheck = { cmd = "basedpyright --level error ." }
check.ignore_fail = "return_non_zero"
check.sequence = [
    { cmd = "ruff check ." },
    { cmd = "basedpyright --level error ." },
]
dev = { shell = "uv run uvicorn main:rest_app --host 0.0.0.0 --port 8001 --reload" }

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["."]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    ".ruff_cache",
    ".pyright_cache",
]
