[project]
name = "recommendations-agent"
version = "0.1.0"
description = "A2A-enabled recommendations agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0,<2.0.0",
    "azure-monitor-opentelemetry>=1.8.8",
    "fastapi>=0.136.3",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0,<1.41.0",
    "opentelemetry-exporter-otlp>=1.40.0,<1.41.0",
    "uvicorn>=0.48.0",
    "pydantic>=2.13.4",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "poethepoet>=0.46.0",
    "ruff>=0.15.15",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.poe.tasks]
format = [
    { cmd = "ruff format ." },
    { cmd = "ruff check . --fix" },
]
lint = { cmd = "ruff check . --fix" }
typecheck = { cmd = "basedpyright --level error ." }
check.ignore_fail = "return_non_zero"
check.sequence = [
    { cmd = "ruff check ." },
    { cmd = "basedpyright --level error ." },
]
dev = { shell = "uv run uvicorn main:app --host 0.0.0.0 --port 5002 --reload" }

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["."]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    ".ruff_cache",
    ".pyright_cache",
]
